# ttbot

./: README.md  frames_2025-11-24_09.29.45.gv
src/FAST_LIO/config/: velodyne_sim.yaml
src/FAST_LIO/src/: preprocess.cpp
src/Xsens_MTi_ROS_Driver_and_Ntrip_Client/: .gitignore
src/adis16488_driver/: CMakeLists.txt  package.xml
src/adis16488_driver/launch/: imu_system.launch.py
src/adis16488_driver/src/: adis16488_node.cpp
src/qgc_bridge/qgc_bridge/: bridge_node.py
src/qgc_bridge_cpp/: CMakeLists.txt
src/qgc_bridge_cpp/launch/: app.launch.py
src/ttbot_bringup/launch/: real.launch.py  sim.launch.py  ttbot_full_system.launch.py
src/ttbot_controller/include/ttbot_controller/: ackermann_controller.hpp  mpc_controller.hpp
src/ttbot_controller/launch/: controller.launch.py  gps_path.launch.py  mpc.launch.py
src/ttbot_controller/path/: path_U_inverse_square_R1.csv  path_U_square_R1.csv  path_circle5.csv  path_sin_bigA.csv  path_square.csv  path_u_S.csv  plot_path.py
src/ttbot_controller/src/: mpc_controller.cpp  path_publisher.cpp
src/ttbot_description/launch/: gazebo.launch.py
src/ttbot_description/worlds/: gps_world.sdf
src/ttbot_gui/: CMakeLists.txt  package.xml
src/ttbot_gui/src/: mainwindow.ui
src/ttbot_localization/config/: ekf.yaml
src/ttbot_localization/launch/: local_localization.launch.py
